# tw-rental-house-data

./: .gitignore  200.html  404.html  CLAUDE.md  LICENSE  Pipfile  README.md  datas  g0v.json  index.html  requirements.txt
.claude/: settings.json
.claude/commands/: commit.md  publish-scrapy-twrh.md  push.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ui-deploy.yml  ui-pull-request.yml
_nuxt/: 0125cba.js  0125cba.js.map  01b3a2f.js  01b3a2f.js.map  01e0e92.js  01e0e92.js.map  02dd309.js  02dd309.js.map  0329746.js  0329746.js.map  04cf04a.js  04cf04a.js.map  05c971f.js  05c971f.js.map  06cb07a.js  06cb07a.js.map  07ab372.js  07ab372.js.map  088f7f2.js  088f7f2.js.map  0901556.js  0901556.js.map  0b813e2.js  0b813e2.js.map  0dea214.js  0dea214.js.map  0e61e08.js  0e61e08.js.map  0e96325.js  0e96325.js.map  0ea6cfb.js  0ea6cfb.js.map  10c5ec2.js  10c5ec2.js.map  10d28d4.js  10d28d4.js.map  11c59f1.js  11c59f1.js.map  13b6b58.js  13b6b58.js.map  (+629 more)
about-data-set/: index.html
backend/: .gitignore  city_id.json  go.sh  gobg.sh  sample.py
blog/: index.html
crawler/: .gitignore  go.sh  settings.sample.py
csv-aggregator/: .gitignore  README.md  check.sh  dedup-single.sh  dedup-single.sql  merge-and-dedup.sh  merge-multiple.sql  pack.sh
download/: index.html
scrapy-package/: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  build.sh  publish.sh  requirements.txt  setup.py
scrapy-tw-rental-house/: .gitignore  README.md  pyproject.toml  scrapy_tw_rental_house
scrapy-tw-rental-house/scrapy_twrh/: items.py
scrapy-tw-rental-house/scrapy_twrh/spiders/: rental_spider.py  tw_regions.json  util.py
scrapy-tw-rental-house/scrapy_twrh/spiders/rental591/: detail_mixin.py  detail_raw_parser.py  list_mixin.py  ocr_utils.py  playwright_utils.py  rental591_spider.py  request_generator.py  util.py
scrapy-twrh-example/: .gitignore  README.md  go.sh  pyproject.toml
scrapy-twrh-example/crawler/: pipelines.py  settings.py
scrapy-twrh-example/crawler/spiders/: big6_spider.py  single_city_spider.py
twrh-dataset/: .gitignore  README.md  go.sh  gobg.sh  pyproject.toml  remove-duplicated-task.sh
twrh-dataset/backend/: .gitignore
twrh-dataset/backend/backend/: settings.py
twrh-dataset/backend/crawlerrequest/management/commands/: statscheck.py
twrh-dataset/backend/crawlerrequest/migrations/: 0001_initial.py
twrh-dataset/backend/rental/: models.py
twrh-dataset/backend/rental/data/: tw_regions.json
twrh-dataset/backend/rental/libs/export/: uniq_export.py
twrh-dataset/backend/rental/migrations/: 0001_initial.py  0004_fill_crawled_at.py  0005_add_more_building_type.py
twrh-dataset/crawler/: general_settings.py  go.sh  gobg.sh  pipelines.py  settings.fast.py  utils.py
twrh-dataset/crawler/crawler/extensions/: sentry.py
twrh-dataset/crawler/extensions/: sentry.py
twrh-dataset/crawler/spiders/: detail591_spider.py  list591_spider.py  persist_queue.py  progress_tracker.py  progress_tracker_example.py
twrh-dataset/crawler/tools/: rerun_detail_dict.py
twrh-dataset/crawler/tools/legacy/: json_writer.py
twrh-dataset/django/backend/: settings.py
twrh-dataset/django/crawlerrequest/: apps.py  enums.py  models.py
twrh-dataset/django/crawlerrequest/management/commands/: deduprequest.py  statscheck.py
twrh-dataset/django/crawlerrequest/migrations/: 0002_crawler_stats.py
twrh-dataset/django/rental/: apps.py  models.py
twrh-dataset/django/rental/data/: tw_regions.json
twrh-dataset/django/rental/fixtures/: vendors.json
twrh-dataset/django/rental/libs/export/: __init__.py  field.py
twrh-dataset/django/rental/management/commands/: archivehistory.py  customexport.py  export.py  invalidate.py  syncstateful.py
twrh-dataset/django/rental/migrations/: 0008_support_price_range.py
twrh-dataset/tools/: memory_monitor.html  monitor_python_memory.sh  normalize_region.py  utils.py
twrh-dataset/tools/legacy/: export.py  export_tlf.py
ui/: .eslintrc.js  .gitignore  README.md  nuxt.config.js  package-lock.json  package.json
(+2791 files in other folders)
