[tool.poetry]
name = "crawler"
version = "0.1.0"
description = "Example for scrapy-tw-rental-house"
authors = ["ddio <ddio@ddio.io>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "paddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.11.0"
pycrypto = "^2.6.1"
scrapy-tw-rental-house = {path = "../scrapy-tw-rental-house"}
scrapy-rotating-proxies = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
