[tool.poetry]
name = "crawler"
version = "0.1.0"
description = "Taiwan rental house database"
authors = ["ddio <ddio@ddio.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# cffi = "==1.13.2"
django = "^5"
scrapy-tw-rental-house = "==1.4.0"
psycopg2-binary = "^2.9.9"
pylint-django = "^2.5.5"
sentry-sdk = "^1.39.1"


[tool.poetry.group.dev.dependencies]
pylint-django = "*"
pylint = "*"
pylint-plugin-utils = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
